# dd

./: .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  app.js  index.html  notes.json  projects.json  pyproject.toml  refresh.py  serve.py  styles.css
.github/workflows/: ci.yml
tests/: test_dashboard_smoke.mjs  test_refresh.py
