[project]
name = "dd"
version = "0.1.0"
description = "Local-first project dashboard with a Python collector and static browser UI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.11.13,<0.12",
]

[tool.uv]
package = false
